<resources>
    <string name="app_name">General Knowledge Quiz</string>

    <string name="ques_statement_Q1">Q1) Joule is the unit of :</string>
    <string name="ques_statement_Q2">Q2) For which of the following disciplines is Nobel Prize awarded ?</string>
    <string name="ques_statement_Q3">Q3) India has largest deposits of _____ in the world ?</string>
    <string name="ques_statement_Q4">Q4) The number of already named bones in Human Skeleton is :</string>
    <string name="ques_statement_Q5">Q5) With which sport is the Jules Rimet trophy associated ?</string>


    <string name="Q1_hint_1">Temperature</string>
    <string name="Q1_hint_2">Pressure</string>
    <string name="Q1_hint_3">Energy</string>
    <string name="Q1_hint_4">heat</string>

    <string name="Q2_hint_1">Physics and Chemistry</string>
    <string name="Q2_hint_2">Physiology or medicine</string>
    <string name="Q2_hint_3">Literature, Peace and Economics</string>
    <string name="Q2_hint_4">None of the Above</string>

    <string name="Q4_hint_1">200</string>
    <string name="Q4_hint_2">206</string>
    <string name="Q4_hint_3">212</string>
    <string name="Q4_hint_4">218</string>

    <string name="Q5_hint_1">Basketball</string>
    <string name="Q5_hint_2">Football</string>
    <string name="Q5_hint_3">Hockey</string>
    <string name="Q5_hint_4">Golf</string>

    <string name="button_text">SCORE</string>
    <string name="heading_text">Now answer these questions below :</string>

</resources>
